<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGris">

        <TextView
            android:id="@+id/DatosPacTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/completePaciente"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:fontFamily="@font/alegreyasansbold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dniPacienteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="32dp"
            android:hint="@string/dni"
            android:inputType="number"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DatosPacTV" />

        <EditText
            android:id="@+id/nombrePacienteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="60dp"
            android:hint="@string/nombre"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dniPacienteET" />

        <Button
            android:id="@+id/buttonFecha"
            android:layout_width="47dp"
            android:layout_height="46dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button_dkgris_style"
            android:drawableStart="@mipmap/calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toEndOf="@+id/fechaDeNacimiento"
            app:layout_constraintTop_toBottomOf="@+id/diagnostico" />

        <TextView
            android:id="@+id/fechaDeNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="120dp"
            android:hint="@string/fecha"
            android:textSize="19sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diagnostico" />

        <EditText
            android:id="@+id/diagnostico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="60dp"
            android:hint="@string/diagnostico"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombrePacienteET" />

        <Button
            android:id="@+id/buttonCargarPaciente"
            style="@style/ButtonVioletaTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:onClick="cargarDatosPaciente"
            android:text="@string/cargar"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@drawable/text_button_violeta"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fechaDeNacimiento" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>